EBUS-152152 Icon off-center fix mobile pages

--- a/ui.frontend/src/main/webpack/components/content/mobile-header/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/mobile-header/style.scss
@@ -48,8 +48,8 @@
         box-shadow: 0 8px 6px -6px $black-shade;
         .pull-left{
             display:block;
-            padding: 5px;
-            margin: 15px;
+            padding: 8px;
+            margin: 8px;
         }
         .navbar-toggle{
             background-color: transparent;
